--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: County-level broadband access from 2010 to 2014
 subtitle: Benjamin Skinner
-baseurl: ""
+baseurl: "/broadband"
 github: https://github.com/btskinner/broadband
 mail: btskinner@virginia.edu
 
