update email and text

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -2,7 +2,7 @@ title: County-level broadband access from 2010 to 2014
 subtitle: Benjamin Skinner
 baseurl: ""
 github: https://github.com/btskinner/broadband
-mail: btskinner@virginia.edu
+mail: btskinner@coe.ufl.edu
 
 date_format: "%d %B %Y"
 
